2006-10-24  David Kastrup  <dak@gnu.org>

	* preview.el (preview-auto-reveal): Fetch keybindings of [left]
	and [right] at runtime.  Change proposed default accordingly.

2006-10-19  David Kastrup  <dak@gnu.org>

	* prv-xemacs.el (preview-defmacro): Use `fboundp' instead of
	`functionp'.
	(add-to-list): compatibility function not needed anymore since
	2006-10-11 change.

2006-10-18  David Kastrup  <dak@gnu.org>

	* preview.el (eval-when-compile): restore function definitions of
	compatibility macros.

	* prv-xemacs.el (preview-defmacro): Also redefine functions that
	actually exist, but save their definition.

	* preview.el (preview-parse-messages): Fix bad regexp.

2006-10-16  David Kastrup  <dak@gnu.org>

	* preview.el (preview-parse-messages): Rearrange the regexp for
	matching and renumber the matches and match strings accordingly.

2006-10-11  David Kastrup  <dak@gnu.org>

	* preview.el (LaTeX-preview-setup): Move setup of
	`TeX-error-description-list' and `TeX-expand-list' to AUCTeX
	proper.

2006-10-10  David Kastrup  <dak@gnu.org>

	* preview.el (preview-gs-filter): Fix prompt match expression to
	allow stack garbage > 10.
	(preview-gs-open): Assume `.runandhide' is defined (Ghostscript
	6.53 and greater).  Don't check Ghostscript stack for correctness,
	just leave garbage.
	(preview-prepare-fast-conversion): Use `.runandhide' to ignore
	garbage left by preamble (such as Omega fonts).
	(preview-LaTeX-command): Use "%'" and "%t" expansion strings in
	order to allow filenames with spaces in them.
	(preview-goto-info-page): Use `info' instead of `Info-goto-node'.
	(preview-parse-messages): Spike up terminal log file name tracing
	in order to have a reasonable chance of detecting spaces in file
	names.
	(preview-parse-messages): Massage match string for partial strings
	to deal better with TeX-quoted control sequences.
	(preview-dump-file-name): The format name should not contain
	spaces.  Replace them with underlines.